2011-11-27  Stefano Zacchiroli  <zack@pps.jussieu.fr>
	* ALL UNRELEASED
	* ALL Cudf: add a new mapping between packages and unique integer
	  identifiers, useful to avoid external uid maps (patch by Pietro
	  Abate)
	* ALL Cudf: who_provides is now more general and can query both
	  installed and available packages (patch by Pietro Abate)

2011-09-15  Stefano Zacchiroli  <zack@pps.jussieu.fr>
	* ALL release 0.6.1
	* ALL Cudf_parser: allow parsing of empty universes as well as
	  parsing of documents containing only a (possibly empty) request

2011-06-01  Stefano Zacchiroli  <zack@pps.jussieu.fr>
	* ALL release 0.6
	* ALL cudf-check: faster (~ 2x) -dump
	* ALL Cudf_printer/Cudf_types_pp: speed improvement (~ 3.5x)
          get rid of Format, output only on strings (_types_pp) or on
          out_channel (_printer).                      [ API change ]
	* ALL Cudf_printer: add IO.output based API
	* ALL Cudf_types_pp: fix pretty printing of "enum[...]" type
	* ALL Cudf_printer.pp_cudf: avoid extra blank line before request
	* doc: clarify is_solution meaning wrt inconsistent universes
	* c-lib: link caml_hash_variant with -ldl

2010-11-04  Stefano Zacchiroli  <zack@pps.jussieu.fr>

	* ALL parser: add support for ExtLib IO channels
	  Thanks Pietro Abate for the patch. (Closes: #299)
	* ALL add Cudf.mem_package (Closes: #307)
	* ALL Development release 0.5.99

2010-06-25  Stefano Zacchiroli  <zack@pps.jussieu.fr>

	* ALL bug fix: do not enforce Keep on uninstalled packages
	  Thanks Ralf Treinen for the patch! (Closes: #266)
	* ALL bug fix: nicer error message for unknown packages found in
	  solution (Closes: #267)
	* ALL bug fix: avoid pretty printing some malformed vpkgformulae
	  (Closes: #272)
	* ALL bug fix: check for duplicate property in 822 stanzas
	  (Closes: #269)
	* ALL bug fix: comments no longer split stanzas in two
	  (Closes: #250)
	* ALL bug fix: perform string escape when pretty printing type
	  declarations (Closes: #271)