@@ -5,6 +5,7 @@
 	  Abate)
 	* ALL Cudf: who_provides is now more general and can query both
 	  installed and available packages (patch by Pietro Abate)
+	* ALL Cudf_printer: expose generic higher order printers
 
 2011-09-15  Stefano Zacchiroli  <zack@pps.jussieu.fr>
 	* ALL release 0.6.1
